--- a/index.HTML
+++ b/index.HTML
@@ -7,9 +7,36 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;500&family=Roboto:ital,wght@1,300;1,500&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="clase 2/clase2css.css".css">
+<link rel="stylesheet" href="../portafolio/assets/style.css".css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </head>
-<body>
+<body style="background-color:rgb(76, 92, 76) ;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../portafolio/imagencv/pages/printbalones/Captura de Pantalla 2022-04-18 a la(s) 01.22.47.png">balones valiosos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../portafolio/imagencv/pages/printcupon/index.html">cuppon</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../portafolio/imagencv/pages/printiguana/index.html">iguana</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 <center><img src="imagencv/yisuscv.jpg"></center>
 <h1>Resumen Curricular</h1>
 <center><p>Tengo 29 años, me gradue de licenciado en comunicacón social hace mas de 7 años, llegue a Chile en 2017 y no tengo ganas de volver a Venezuela, he estudiado mas de lo que he vivido y hasta ahora no he encontrado el trabajo que me deje el tiempo disponible para disfrutar de criar a mi hijo, eso no quiere decir que dejare de buscar, solo quiere decir que debo continuar sin detenerme.</p></center>
@@ -19,7 +46,7 @@
 <li>Fecha de nacimiento: 16 de mayo 1992</li></ul>
 <h1>Educación</h1>
 <div><ul> <li>Licenciado en comunicación social , egresado en 2015 de la Universidad Bicentenaria de Aragua, Venezuela.</li>
-    <li>Desafio latam: Introducciòn a la programaciòn</li>
+    <li>Desafio latam: Introducciòn a la programaciòn 2022</li>
 <li>Diplomado de gerencia polìtica y gestión publica en la Universidad Catòlica Andres Bello</li></ul></div>
 <h1> Experiencia laboral </h1>
     <ol><li>Jefe de salòn del restaurante krossbar desde el 2018 hasta el presente </li>
