--- a/printpantalla.html
+++ b/printpantalla.html
@@ -2,5 +2,5 @@
 <body>
     <title>print de pantalla</title>
 </body>
-<img src="printpantallacv2022-2.png">
+<img src="../portafolio/imagencv/printpantallacv2022-2.png">
 </html>
