--- a/index.HTML
+++ b/index.HTML
@@ -15,14 +15,14 @@
 <body style="background-color:rgb(76, 92, 76) ;">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">portafolio</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#">portafolio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="../portafolio/imagencv/pages/printbalones/Captura de Pantalla 2022-04-18 a la(s) 01.22.47.png">balones valiosos</a>
