mi primer commit

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,7 +56,7 @@
 <center><p>Antes de titularme desemepeñe, funciones como productor y comunituy manager de un programa deportivo que se trasnmitia de lunes a viernes a travès de la señal 98.5FM con el fin de informar la actualidad deportiva que sucedia en el ambito nacional e internacional, nuestros temas se enfocaban en el futbol, sin embargo se tocaban temas relacionados a otras disciplinas deportivas.</center></p></ol>
     <table border ="1"><tr> 
         <td><p>ir a <a href="https://www.facebook.com/profile.php?id=100009640894916">mi perfil </a> </td>
-<td><p> ir a <a href="file:///Users/macbookpro/Desktop/portafolio/printpantalla.html"> portafolio</a></p></td>
+<td><p> ir a <a href="file:///Users/macbookpro/Desktop/portafolio/imagencv/printpantalla.html"> portafolio</a></p></td>
 </tr>
     </table>
 </body>
