--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                 <a class="nav-link active" aria-current="page" href="#">portafolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../portafolio/imagencv/pages/printbalones/Captura de Pantalla 2022-04-18 a la(s) 01.22.47.png">balones valiosos</a>
+                <a class="nav-link" href="./imagencv/pages/printbalones/index.html">balones valiosos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../portafolio/imagencv/pages/printcupon/index.html">cuppon</a>
+                <a class="nav-link" href="./imagencv/pages/printcupon/index.html">cuppon</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../portafolio/imagencv/pages/printiguana/index.html">iguana</a>
+                <a class="nav-link" href="./imagencv/pages/printiguana/index.html">iguana</a>
               </li>
             </ul>
           </div>
